<resources>
    <string name="app_name">Yify</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="something_went">Something went wrong.</string>
    <string name="network_failed">Check your internet connection.</string>
    <string name="timed_out">Connection Timed out.Please try again.</string>
    <string name="internal_error">Please try later.</string>
    <string name="alert">Alert</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_success_msg">Registration successful</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Yify</string>
    <string name="user_name_empty_error">User-name cannot be empty</string>
    <string name="email_empty_error">Email cannot be empty</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="long_text">this is a  very long text so please stop reading this.If you are reading this then you are probably very smart.You will find the treasure on these cordinates 21* 34\' 54\'\' ,29*39\'56\'\'</string>
    <string name="upcomingmov">Upcoming Movies</string>
    <string name="movies">Movies</string>
    <string name="sort_by_string">Sort By</string>
    <string name="select_quality_label">Select Quality</string>
    <string name="movie_quality_option_all">All</string>
    <string name="movie_quality_option_720p">720p</string>
    <string name="movie_quality_option_1080p">1080p</string>
    <string name="movie_quality_option_3D">3D</string>
    <string name="min_rating_spinner_label">Minimum rating</string>
</resources>